--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,57 @@
+html{
+  /*background-color: green;*/
+  /*background-repeat: no-repeat;
+  background-size: cover;*/
+  /*background-position: bottom;*/
+}
 body {
   background-image: url(../img/pig.jpg);
   background-repeat: no-repeat;
-  background-size: cover;
+  /*background-color: red;*/
+  background-position: bottom;
+  background-attachment: fixed;
+}
+
+.container{
+  /*background-color: yellow;*/
+  height: 1000px;
+  /*background-color: rgba(225, 225, 225, 0.5);*/
+}
+
+.col-styles{
+  /*margin: 5px;*/
+}
+
+h1 {
+  text-align: center;
+  font-size: 70px;
+  padding-bottom: 40px;
+  padding-top: 40px;
+}
+
+
+img{
+  max-width: 110px;
+  padding-bottom: 10px;
+}
+
+#row1{
+  /*background-color: purple;*/
+}
+
+#row2{
+  /*background-color: pink;*/
+}
+
+#rules {
+  /*background-color: blue;*/
+  font-weight: bold;
+}
+#totalscores h2 {
+  float:left;
+}
+
+#your-turn, #you-rolled, #totalscores {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
